--- a/WebContent/css/admin.css
+++ b/WebContent/css/admin.css
@@ -24,6 +24,10 @@
             margin: 0;
             overflow-x: hidden;
         }
+        .required-star {
+    color: red;
+    font-weight: bold;
+}
         
         /* ========== SIDEBAR ========== */
         .sidebar {
